plugins/kotlin/idea/tests/testData/highlighterMetaInfo/jvm/inspections/coroutines/coroutineContextWithJob/launch/NonCancellable_plus_arbitraryCoroutineContext.kt.highlighting
// FIR_IDENTICAL
// HIGHLIGHT_WARNINGS
// WITH_COROUTINES
package test

import kotlin.coroutines.CoroutineContext
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.NonCancellable
import kotlinx.coroutines.launch

fun CoroutineScope.test(ctx: CoroutineContext) {
    launch(<!HIGHLIGHTING("severity='WARNING'; descr=''NonCancellable' object should not be used with 'launch' builder, it violates structured concurrency'")!>NonCancellable<!> + ctx) {}
}
// TOOL: org.jetbrains.kotlin.idea.codeInsight.inspections.shared.coroutines.CoroutineContextWithJobInspection
